--- a/DA/origin.ipynb
+++ b/DA/origin.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "id": "a56fe3d9-40fa-426d-854a-63a1f5bf29d9",
    "metadata": {
     "tags": []
@@ -38,11 +38,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Collecting xlrd\n",
-      "  Downloading xlrd-2.0.1-py2.py3-none-any.whl (96 kB)\n",
-      "     ---------------------------------------- 96.5/96.5 kB 5.4 MB/s eta 0:00:00\n",
-      "Installing collected packages: xlrd\n",
-      "Successfully installed xlrd-2.0.1\n"
+      "Requirement already satisfied: xlrd in d:\\shipsupplies\\venv\\lib\\site-packages (2.0.1)\n"
      ]
     },
     {
@@ -61,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "b1c4dd5a-9754-4b4f-8cca-f252a631c5d8",
    "metadata": {
     "tags": []
@@ -74,7 +70,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[4], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mwarning\u001b[39;00m\n\u001b[0;32m      3\u001b[0m warning\u001b[38;5;241m.\u001b[39msimplefilter(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mignore\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
+      "Cell \u001b[1;32mIn[3], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mwarning\u001b[39;00m\n\u001b[0;32m      3\u001b[0m warning\u001b[38;5;241m.\u001b[39msimplefilter(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mignore\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
       "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'warning'"
      ]
     }
@@ -87,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "id": "a58037b8-a7ed-4816-b8ce-58eb2d4c7896",
    "metadata": {
     "tags": []
@@ -310,7 +306,7 @@
        "[5 rows x 33 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -322,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "id": "122b5c62-f59e-4d30-ac1b-47ac96819b83",
    "metadata": {},
    "outputs": [
@@ -337,7 +333,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -348,51 +344,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 6,
    "id": "c5c59f88-83bd-426e-b9c4-8bf7372d40d8",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "청구서번호                   object\n",
-       "No.                    float64\n",
-       "Subject                 object\n",
-       "Machinery               object\n",
-       "Assembly                object\n",
-       "청구품목                    object\n",
-       "Unnamed: 6             float64\n",
-       "Part No.1               object\n",
-       "Part No.2               object\n",
-       "청구량                    float64\n",
-       "견적                      object\n",
-       "Unnamed: 11            float64\n",
-       "견적수량                   float64\n",
-       "견적화폐                    object\n",
-       "견적단가                   float64\n",
-       "발주번호                    object\n",
-       "발주처                     object\n",
-       "발주              datetime64[ns]\n",
-       "발주수량                   float64\n",
-       "발주금액                   float64\n",
-       "D/T                     object\n",
-       "미입고 기간                  object\n",
-       "창고입고            datetime64[ns]\n",
-       "창고입고수량                 float64\n",
-       "Control No.             object\n",
-       "입고창고                    object\n",
-       "창고출고                    object\n",
-       "창고출고수량                 float64\n",
-       "출고선박                    object\n",
-       "출고운반선                   object\n",
-       "선박입고                    object\n",
-       "선박입고수량                 float64\n",
-       "완료 여부                   object\n",
-       "소요시간           timedelta64[ns]\n",
+       "청구서번호           object\n",
+       "No.            float64\n",
+       "Subject         object\n",
+       "Machinery       object\n",
+       "Assembly        object\n",
+       "청구품목            object\n",
+       "Unnamed: 6     float64\n",
+       "Part No.1       object\n",
+       "Part No.2       object\n",
+       "청구량            float64\n",
+       "견적              object\n",
+       "Unnamed: 11    float64\n",
+       "견적수량           float64\n",
+       "견적화폐            object\n",
+       "견적단가           float64\n",
+       "발주번호            object\n",
+       "발주처             object\n",
+       "발주              object\n",
+       "발주수량           float64\n",
+       "발주금액           float64\n",
+       "D/T             object\n",
+       "미입고 기간          object\n",
+       "창고입고            object\n",
+       "창고입고수량         float64\n",
+       "Control No.     object\n",
+       "입고창고            object\n",
+       "창고출고            object\n",
+       "창고출고수량         float64\n",
+       "출고선박            object\n",
+       "출고운반선           object\n",
+       "선박입고            object\n",
+       "선박입고수량         float64\n",
+       "완료 여부           object\n",
        "dtype: object"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -403,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 7,
    "id": "8a494b4b-4991-4ce7-8151-c156f3d5f6fe",
    "metadata": {},
    "outputs": [
@@ -413,7 +408,7 @@
        "dtype('float64')"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -424,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 8,
    "id": "9e175b09-8a25-4851-985e-73b448d5a87e",
    "metadata": {},
    "outputs": [
@@ -637,7 +632,7 @@
        "[5 rows x 33 columns]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -650,7 +645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 12,
    "id": "382f2b00-6cdd-4a1c-97b4-2294f0f76b7a",
    "metadata": {},
    "outputs": [
@@ -863,14 +858,43 @@
        "[5 rows x 34 columns]"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df['소요시간'] = df.apply(lambda x : df['발주'] - df['창고입고'])\n",
+    "# df['소요시간'] = df.apply(lambda x : df['발주'] - df['창고입고'])\n",
+    "df['소요시간'] = df['발주'] - df['창고입고']\n",
     "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "926d6072-dee4-4790-9579-25c34f87d312",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['청구서번호', 'No.', 'Subject', 'Machinery', 'Assembly', '청구품목',\n",
+       "       'Unnamed: 6', 'Part No.1', 'Part No.2', '청구량', '견적', 'Unnamed: 11',\n",
+       "       '견적수량', '견적화폐', '견적단가', '발주번호', '발주처', '발주', '발주수량', '발주금액', 'D/T',\n",
+       "       '미입고 기간', '창고입고', '창고입고수량', 'Control No.', '입고창고', '창고출고', '창고출고수량',\n",
+       "       '출고선박', '출고운반선', '선박입고', '선박입고수량', '완료 여부', '소요시간'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.columns"
    ]
   }
  ],
