--- a/DA/notebooks/postprocessing_1.ipynb
+++ b/DA/notebooks/postprocessing_1.ipynb
@@ -1737,7 +1737,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 139,
    "metadata": {},
    "outputs": [
     {
@@ -1930,7 +1930,7 @@
        "[20858 rows x 6 columns]"
       ]
      },
-     "execution_count": 137,
+     "execution_count": 139,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1938,6 +1938,15 @@
    "source": [
     "df_product = df1[[\"발주처\", \"청구품목\", 'leadtime',\"Assembly\" ,\"Machinery\" ,\"Part No.1\"]]\n",
     "df_product"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 140,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df1.to_csv('../data/raw_postpro2.csv',index=False, encoding='utf-8-sig')"
    ]
   },
   {
