--- a/DA/notebooks/classification.ipynb
+++ b/DA/notebooks/classification.ipynb
@@ -312,25 +312,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 1,
    "id": "d65329da",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "15     4\n",
-       "16     4\n",
-       "17    25\n",
-       "18    25\n",
-       "19    25\n",
-       "20    25\n",
-       "Name: key2, dtype: int32"
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'y' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43my\u001b[49m\u001b[38;5;241m.\u001b[39munique()\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'y' is not defined"
+     ]
     }
    ],
    "source": [
