--- a/DA/notebooks/postprocessing.ipynb
+++ b/DA/notebooks/postprocessing.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "c16ca170-7b46-429f-bcf8-1b81dcef7d84",
    "metadata": {
     "tags": []
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "fa7d8604-2230-4f85-a3ca-18c6c239cd0d",
    "metadata": {
     "tags": []
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "id": "2a00cab6-021c-45a1-ae12-abf2ae49e075",
    "metadata": {
     "tags": []
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "id": "9efaf91e-64e3-4619-a855-e6d8a1454fb5",
    "metadata": {
     "tags": []
@@ -359,7 +359,7 @@
        "[5 rows x 35 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -393,20 +393,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "f2ed5364-093f-4b5d-98d5-ef1a067d6a3c",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
+    "df1 = df.copy()\n",
+    "# df1\n",
+    "temp1 = df[(df['발주'] == 0) | (df['창고입고'] == 0)] # 발주날짜와 입고 날짜가 없는 데이터\n",
+    "idx = temp1.index\n",
+    "temp1\n",
+    "df1 = df.drop(idx)  # 삭제\n",
+    "\n",
+    "df1 = df1.reset_index() # 인덱스 초기화\n",
+    "df1 = df1.drop('index', axis=1) # index 열 삭제\n",
+    "\n",
+    "# df1\n",
+    "# df1\n",
     "df1['발주'] = pd.to_datetime(df1['발주'])\n",
     "df1['창고입고'] = pd.to_datetime(df1['창고입고'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "id": "8808e66b-8186-405a-b8d7-9c7655479a9a",
    "metadata": {
     "tags": []
@@ -423,7 +435,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -913,7 +925,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 20,
    "id": "69bf06fe-b197-4df6-9559-d41ef2cee2ff",
    "metadata": {
     "tags": []
@@ -928,7 +940,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 21,
    "id": "682354d8-3265-416a-be44-baed5eaaf021",
    "metadata": {
     "tags": []
@@ -1343,7 +1355,7 @@
        "[20517 rows x 21 columns]"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1354,122 +1366,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 22,
    "id": "ba094414-5bb0-4f79-b39c-70ec67e09c02",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>leadtime</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>194</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>59</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>61</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>212</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>220</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>20512</th>\n",
-       "      <td>95</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>20513</th>\n",
-       "      <td>67</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>20514</th>\n",
-       "      <td>25</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>20515</th>\n",
-       "      <td>25</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>20516</th>\n",
-       "      <td>25</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>20517 rows × 1 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "       leadtime\n",
-       "0           194\n",
-       "1            59\n",
-       "2            61\n",
-       "3           212\n",
-       "4           220\n",
-       "...         ...\n",
-       "20512        95\n",
-       "20513        67\n",
-       "20514        25\n",
-       "20515        25\n",
-       "20516        25\n",
-       "\n",
-       "[20517 rows x 1 columns]"
-      ]
-     },
-     "execution_count": 29,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "df1[['leadtime']]"
+    "# df1[['leadtime']]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 23,
    "id": "c30cc454-b1ee-45a8-ba80-fe9b7c242301",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "df1.to_csv('../data/raw_postpro3.csv',index=False, encoding='utf-8-sig')"
+    "df1.to_csv('../data/raw_postpro.csv',index=False, encoding='utf-8-sig')"
    ]
   }
  ],
