리드타임 -> 분류모델

--- a/DA/notebooks/regression.ipynb
+++ b/DA/notebooks/regression.ipynb
@@ -3259,7 +3259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "id": "2ad711fa-25ca-480b-9294-16bca3568187",
    "metadata": {
     "tags": []
@@ -3269,7 +3269,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\SW\\AppData\\Local\\Temp\\ipykernel_17228\\1378052945.py:5: SettingWithCopyWarning: \n",
+      "C:\\Users\\SW\\AppData\\Local\\Temp\\ipykernel_17900\\1378052945.py:5: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -3883,8 +3883,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
-   "id": "caf7ff9d-1eef-4b7e-8118-70468ea1ce78",
+   "execution_count": 127,
+   "id": "fa107350-76ef-4723-b118-575802d31eda",
    "metadata": {
     "tags": []
    },
@@ -3896,40 +3896,33 @@
     "from sklearn.linear_model import LinearRegression\n",
     "from sklearn.metrics import mean_squared_error, r2_score\n",
     "\n",
-    "X = list(df[\"Subject\"]+ ' ' + df['key2']  + ' '   + df['Assembly'] + ' '  + df['출고운반선']+  ' ' + df['견적화폐']  +  ' ' + df['Control No.']  )\n",
-    "# + df['발주처'] + ' '\n",
-    "# X = list(df[\"Subject\"]+ ' ' + df['key1'] +  ' ' + df['Control No.'] + ' ' + df['Assembly']+ ' ' + df['출고선박'] )\n",
-    "# target = list(df1['leadtime'])\n",
-    "target = list(df['리드타임'])\n",
-    "y = target"
+    "X = list(df[\"Subject\"]+ ' ' + df['key2']  + ' '   + df['Assembly'] + ' '  + df['출고운반선']+  ' ' + df['견적화폐']  +  ' ' + df['발주처']  )\n",
+    "# type(y[0])\n",
+    "# # y # 정규화\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "\n",
+    "# target 값\n",
+    "y = df['leadtime']\n",
+    "\n",
+    "# StandardScaler 객체 생성\n",
+    "scaler = StandardScaler()\n",
+    "\n",
+    "# y\n",
+    "# y 값 정규화\n",
+    "y_normalized = scaler.fit_transform(y.values.reshape(-1, 1))\n",
+    "\n",
+    "# 정규화된 y 값 출력\n",
+    "# y_normalized = list(y_normalized)\n",
+    "# y_normalized\n",
+    "\n",
+    "# y_normalized\n",
+    "# print(y_normalized.shape)\n",
+    "# y_train, y_test\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
-   "id": "fa107350-76ef-4723-b118-575802d31eda",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "int"
-      ]
-     },
-     "execution_count": 65,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "type(y[0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 110,
    "id": "5482cfb7-fa24-42b6-b557-914016d89ec9",
    "metadata": {
     "tags": []
@@ -3939,8 +3932,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "MSE 1037.3587744271224\n",
-      "R2 0.7807123935111588\n"
+      "MSE 0.21601980646473634\n",
+      "R2 0.7780977070223671\n"
      ]
     }
    ],
@@ -3948,9 +3941,8 @@
     "vectorizer = CountVectorizer()\n",
     "X = vectorizer.fit_transform(X)\n",
     "\n",
-    "\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=40)\n",
-    "\n",
+    "# X_train, X_test, y_train, y_test = train_test_split(X, y_normalized, test_size=0.2, random_state=40) # y 정규화 된 데이터 사용\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=40) # 그냥 y 정규화 하지 않고 사용\n",
     "\n",
     "lr = LinearRegression()\n",
     "lr.fit(X_train, y_train)\n",
@@ -3966,8 +3958,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 80,
    "id": "13a59f91-f74e-496e-b0a8-ae14cf1514cd",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(pandas.core.series.Series, numpy.ndarray)"
+      ]
+     },
+     "execution_count": 80,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(y_test),type(y_pred)#.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 122,
+   "id": "c80b5c6f-d23d-4d4f-ac2b-ecdefe22bd4a",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# X"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "793387a9-a58e-4322-a5a1-cedfb784a9b2",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -3975,26 +4002,451 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "96100a43-c267-4636-adc2-0c34c39c27da",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 241,
+   "id": "99f8dcca-d0c9-4459-8a78-f5b76fdfd036",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "from gensim.models import FastText\n",
+    "from sklearn.feature_extraction.text import CountVectorizer\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.metrics import mean_squared_error, r2_score\n",
+    "\n",
+    "X = list(df[\"Subject\"]+ ' ' + df['key2']  + ' '   + df['Assembly'] + ' '  + df['출고운반선']+  ' ' + df['견적화폐']  +  ' ' + df['발주처']  )\n",
+    "\n",
+    "# y # 정규화\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "# target 값\n",
+    "y = df['leadtime']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 242,
+   "id": "c79165a1-9c0e-41f3-8468-ceaade30b978",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "from keras.models import Sequential\n",
+    "from keras.layers import Embedding,LSTM, Conv1D, MaxPooling1D, Dense, Flatten\n",
+    "from tensorflow.keras.preprocessing import sequence\n",
+    "from tensorflow.keras.preprocessing.text import Tokenizer\n",
+    "from tensorflow.keras.preprocessing.sequence import pad_sequences\n",
+    "\n",
+    "# 텍스트 데이터를 정수 시퀀스로 변환\n",
+    "tokenizer = Tokenizer()\n",
+    "tokenizer.fit_on_texts(X)\n",
+    "sequences = tokenizer.texts_to_sequences(X)\n",
+    "\n",
+    "\n",
+    "# 시퀀스 패딩\n",
+    "max_sequence_length = 100  # 적절한 시퀀스 길이로 설정\n",
+    "padded_sequences = pad_sequences(sequences, maxlen=max_sequence_length)\n",
+    "\n",
+    "# 데이터 분할\n",
+    "X_train, X_test, y_train, y_test = train_test_split(padded_sequences, y, test_size=0.2, random_state=42)\n",
+    "\n",
+    "# y_train과 y_test 정규화\n",
+    "scaler = StandardScaler()\n",
+    "y_train = scaler.fit_transform(y_train.values.reshape(-1, 1))\n",
+    "y_test = scaler.transform(y_test.values.reshape(-1, 1))\n",
+    "\n",
+    "\n",
+    "# 모델 구성\n",
+    "# model = Sequential()\n",
+    "# model.add(Embedding(input_dim=500, output_dim=100, input_length=max_sequence_length))\n",
+    "# model.add(Conv1D(filters=64, kernel_size=3, activation='relu'))\n",
+    "# model.add(MaxPooling1D(pool_size=2))\n",
+    "# model.add(LSTM(64))\n",
+    "# model.add(Dense(1))\n",
+    "\n",
+    "# # 위에 코드 가져옴\n",
+    "# model = Sequential()\n",
+    "# model.add(Conv1D(filters=64, kernel_size=3, activation='relu', input_shape=(max_sequence_length,)))\n",
+    "# model.add(Reshape((12309, 64)))\n",
+    "# model.add(MaxPooling1D(pool_size=2))\n",
+    "# model.add(LSTM(64))\n",
+    "# model.add(Dense(1))\n",
+    "\n",
+    "# 모델 구성\n",
+    "model = Sequential()\n",
+    "model.add(Embedding(input_dim=12309, output_dim=100, input_length=max_sequence_length))\n",
+    "model.add(Conv1D(filters=64, kernel_size=3, activation='relu'))\n",
+    "model.add(MaxPooling1D(pool_size=2))\n",
+    "model.add(LSTM(64))\n",
+    "model.add(Dense(1))\n",
+    "\n",
+    "\n",
+    "# 모델 컴파일\n",
+    "model.compile(loss='mean_squared_error', optimizer='adam')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 237,
+   "id": "58690fb1-b260-45c2-bafb-c81617150113",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "((16413, 100), (16413, 1))"
+      ]
+     },
+     "execution_count": 237,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_train.shape, y_train.shape\n",
+    "# len(X), len(y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 238,
+   "id": "3b0e0a34-9146-479d-aabb-eb77e2729035",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "((4104, 100), (4104, 1))"
+      ]
+     },
+     "execution_count": 238,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_test.shape, y_test.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 243,
+   "id": "182f9212-31ce-426d-9522-1c72a3fadf13",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/10\n",
+      "165/165 [==============================] - 9s 48ms/step - loss: 0.4121 - val_loss: 0.2166\n",
+      "Epoch 2/10\n",
+      "165/165 [==============================] - 7s 45ms/step - loss: 0.1594 - val_loss: 0.1652\n",
+      "Epoch 3/10\n",
+      "165/165 [==============================] - 7s 45ms/step - loss: 0.1081 - val_loss: 0.1378\n",
+      "Epoch 4/10\n",
+      "165/165 [==============================] - 7s 45ms/step - loss: 0.0767 - val_loss: 0.1183\n",
+      "Epoch 5/10\n",
+      "165/165 [==============================] - 8s 45ms/step - loss: 0.0564 - val_loss: 0.1088\n",
+      "Epoch 6/10\n",
+      "165/165 [==============================] - 7s 45ms/step - loss: 0.0483 - val_loss: 0.0909\n",
+      "Epoch 7/10\n",
+      "165/165 [==============================] - 7s 45ms/step - loss: 0.0430 - val_loss: 0.0915\n",
+      "Epoch 8/10\n",
+      "165/165 [==============================] - 7s 45ms/step - loss: 0.0379 - val_loss: 0.0926\n",
+      "Epoch 9/10\n",
+      "165/165 [==============================] - 7s 45ms/step - loss: 0.0314 - val_loss: 0.0933\n",
+      "Epoch 10/10\n",
+      "165/165 [==============================] - 7s 45ms/step - loss: 0.0271 - val_loss: 0.0818\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<keras.callbacks.History at 0x1b5d960ded0>"
+      ]
+     },
+     "execution_count": 243,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 모델 훈련\n",
+    "model.fit(X_train, y_train, epochs=10, batch_size=100, validation_data=(X_test, y_test))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 250,
+   "id": "2ef71a5d-f265-40e1-8592-5e0e86b53b70",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "129/129 [==============================] - 1s 4ms/step\n",
+      "Predicted values:\n",
+      "[[ 0.8787939 ]\n",
+      " [-0.03099362]\n",
+      " [-0.32525623]\n",
+      " ...\n",
+      " [ 0.03005731]\n",
+      " [-1.1227385 ]\n",
+      " [ 0.09150735]]\n",
+      "Actual values:\n",
+      "[[145.]\n",
+      " [ 78.]\n",
+      " [ 56.]\n",
+      " ...\n",
+      " [  5.]\n",
+      " [  0.]\n",
+      " [ 80.]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "y_pred = model.predict(X_test)\n",
+    "\n",
+    "# 예측 결과 출력\n",
+    "print(\"Predicted values:\")\n",
+    "print(y_pred)\n",
+    "\n",
+    "print(\"Actual values:\")\n",
+    "print(y_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 251,
+   "id": "e6e9279a-d397-4adb-8403-9c5cdaac4dcb",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "R^2 Score: -1.170233379217025\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import r2_score\n",
+    "\n",
+    "r2 = r2_score(y_test, y_pred)\n",
+    "print(\"R^2 Score:\", r2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 248,
+   "id": "c04a447f-1fd1-44ab-8557-395c0220abbd",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Actual: [145.] Predicted: [137.254]\n",
+      "Actual: [78.] Predicted: [73.74152]\n",
+      "Actual: [56.] Predicted: [53.198986]\n",
+      "Actual: [108.] Predicted: [128.79097]\n",
+      "Actual: [220.] Predicted: [187.18962]\n",
+      "Actual: [43.] Predicted: [46.800457]\n",
+      "Actual: [100.] Predicted: [88.934784]\n",
+      "Actual: [156.] Predicted: [161.49066]\n",
+      "Actual: [10.] Predicted: [8.983459]\n",
+      "Actual: [11.] Predicted: [10.035362]\n",
+      "Actual: [195.] Predicted: [200.47772]\n",
+      "Actual: [153.] Predicted: [169.86134]\n",
+      "Actual: [48.] Predicted: [18.613747]\n",
+      "Actual: [15.] Predicted: [13.10841]\n",
+      "Actual: [59.] Predicted: [73.91463]\n",
+      "Actual: [145.] Predicted: [132.04257]\n",
+      "Actual: [21.] Predicted: [20.742588]\n",
+      "Actual: [42.] Predicted: [40.93881]\n",
+      "Actual: [6.] Predicted: [6.1796494]\n",
+      "Actual: [46.] Predicted: [58.963406]\n",
+      "Actual: [3.] Predicted: [6.081856]\n",
+      "Actual: [132.] Predicted: [123.98383]\n",
+      "Actual: [3.] Predicted: [-0.7919541]\n",
+      "Actual: [14.] Predicted: [12.979439]\n",
+      "Actual: [370.] Predicted: [347.8837]\n",
+      "Actual: [0.] Predicted: [14.553131]\n",
+      "Actual: [140.] Predicted: [154.98233]\n",
+      "Actual: [105.] Predicted: [126.15811]\n",
+      "Actual: [91.] Predicted: [90.848404]\n",
+      "Actual: [82.] Predicted: [183.14743]\n",
+      "Actual: [18.] Predicted: [19.197117]\n",
+      "Actual: [14.] Predicted: [13.218903]\n",
+      "Actual: [370.] Predicted: [334.7753]\n",
+      "Actual: [30.] Predicted: [26.209236]\n",
+      "Actual: [130.] Predicted: [128.11838]\n",
+      "Actual: [69.] Predicted: [69.457054]\n",
+      "Actual: [13.] Predicted: [16.492783]\n",
+      "Actual: [12.] Predicted: [19.153137]\n",
+      "Actual: [41.] Predicted: [37.78141]\n",
+      "Actual: [145.] Predicted: [132.04257]\n",
+      "Actual: [117.] Predicted: [123.32321]\n",
+      "Actual: [31.] Predicted: [29.760235]\n",
+      "Actual: [4.] Predicted: [10.2506485]\n",
+      "Actual: [53.] Predicted: [45.670063]\n",
+      "Actual: [33.] Predicted: [31.380436]\n",
+      "Actual: [102.] Predicted: [107.9348]\n",
+      "Actual: [46.] Predicted: [49.026615]\n",
+      "Actual: [30.] Predicted: [31.83923]\n",
+      "Actual: [0.] Predicted: [13.106239]\n",
+      "Actual: [65.] Predicted: [92.53655]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# y_test와 y_pred를 numpy 배열로 변환합니다.\n",
+    "# 정규화 하지 않은 데이터\n",
+    "y_test_arr = np.array(y_test)\n",
+    "y_pred_arr = np.array(y_pred)\n",
+    "\n",
+    "# 값들을 비교하면서 출력합니다.\n",
+    "for i in range(50):\n",
+    "    print(\"Actual:\", y_test_arr[i], \"Predicted:\", y_pred_arr[i])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 247,
    "id": "05ec8575-a3b0-4184-af0c-b3f8da4de22b",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Actual: [145.] Predicted: [137.254]\n",
+      "Actual: [78.] Predicted: [73.74152]\n",
+      "Actual: [56.] Predicted: [53.198986]\n",
+      "Actual: [108.] Predicted: [128.79097]\n",
+      "Actual: [220.] Predicted: [187.18962]\n",
+      "Actual: [43.] Predicted: [46.800457]\n",
+      "Actual: [100.] Predicted: [88.934784]\n",
+      "Actual: [156.] Predicted: [161.49066]\n",
+      "Actual: [10.] Predicted: [8.983459]\n",
+      "Actual: [11.] Predicted: [10.035362]\n",
+      "Actual: [195.] Predicted: [200.47772]\n",
+      "Actual: [153.] Predicted: [169.86134]\n",
+      "Actual: [48.] Predicted: [18.613747]\n",
+      "Actual: [15.] Predicted: [13.10841]\n",
+      "Actual: [59.] Predicted: [73.91463]\n",
+      "Actual: [145.] Predicted: [132.04257]\n",
+      "Actual: [21.] Predicted: [20.742588]\n",
+      "Actual: [42.] Predicted: [40.93881]\n",
+      "Actual: [6.] Predicted: [6.1796494]\n",
+      "Actual: [46.] Predicted: [58.963406]\n",
+      "Actual: [3.] Predicted: [6.081856]\n",
+      "Actual: [132.] Predicted: [123.98383]\n",
+      "Actual: [3.] Predicted: [-0.7919541]\n",
+      "Actual: [14.] Predicted: [12.979439]\n",
+      "Actual: [370.] Predicted: [347.8837]\n",
+      "Actual: [0.] Predicted: [14.553131]\n",
+      "Actual: [140.] Predicted: [154.98233]\n",
+      "Actual: [105.] Predicted: [126.15811]\n",
+      "Actual: [91.] Predicted: [90.848404]\n",
+      "Actual: [82.] Predicted: [183.14743]\n",
+      "Actual: [18.] Predicted: [19.197117]\n",
+      "Actual: [14.] Predicted: [13.218903]\n",
+      "Actual: [370.] Predicted: [334.7753]\n",
+      "Actual: [30.] Predicted: [26.209236]\n",
+      "Actual: [130.] Predicted: [128.11838]\n",
+      "Actual: [69.] Predicted: [69.457054]\n",
+      "Actual: [13.] Predicted: [16.492783]\n",
+      "Actual: [12.] Predicted: [19.153137]\n",
+      "Actual: [41.] Predicted: [37.78141]\n",
+      "Actual: [145.] Predicted: [132.04257]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# y_test와 y_pred를 numpy 배열로 변환합니다.\n",
+    "# 정규화 한 데이터\n",
+    "\n",
+    "# 원래 스케일로 되돌리기\n",
+    "# y_test = scaler.inverse_transform(y_test)\n",
+    "# y_pred = scaler.inverse_transform(y_pred)\n",
+    "\n",
+    "# y_test_arr = np.array(y_test)\n",
+    "# y_pred_arr = np.array(y_pred)\n",
+    "\n",
+    "# 값들을 비교하면서 출력합니다.\n",
+    "for i in range(40):\n",
+    "    print(\"Actual:\", y_test_arr[i], \"Predicted:\", y_pred_arr[i])"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 253,
    "id": "51e11ef7-d811-43bd-934d-3e16b4967934",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "R^2 Score: -1.170233379217025\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import r2_score\n",
+    "\n",
+    "r2 = r2_score(y_test, y_pred)\n",
+    "print(\"R^2 Score:\", r2)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 252,
    "id": "7c42e339-0562-432f-8e3e-3db45cd3ef8f",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "129/129 [==============================] - 1s 4ms/step - loss: 10423.9658\n",
+      "Mean Squared Error: 10423.9658203125\n"
+     ]
+    }
+   ],
+   "source": [
+    "mse = model.evaluate(X_test, y_test)\n",
+    "print(\"Mean Squared Error:\", mse)"
+   ]
   },
   {
    "cell_type": "code",
